# cj_firebase

./: README.md
smart_grow/: CMakeLists.txt  sdkconfig  sdkconfig.old
smart_grow/components/BH1750/: CMakeLists.txt  bh1750.c
smart_grow/components/BH1750/include/: bh1750.h
smart_grow/components/BLUFI/: CMakeLists.txt  blufi.c
smart_grow/components/BLUFI/include/: blufi.h
smart_grow/components/DHT/: CMakeLists.txt  dht.c
smart_grow/components/DHT/include/: dht.h
smart_grow/components/HEADER/: CMakeLists.txt  header.c
smart_grow/components/HEADER/include/: header.h  http_config.h
smart_grow/components/HTTP/: CMakeLists.txt  certificate.pem  http.c
smart_grow/components/HTTP/include/: http.h
smart_grow/components/POMP/: CMakeLists.txt  pomp.c
smart_grow/components/POMP/include/: pomp.h
smart_grow/components/RTC/: CMakeLists.txt  ntp.c
smart_grow/components/RTC/include/: ntp.h
smart_grow/components/SOIL/: CMakeLists.txt  soil.c
smart_grow/components/SOIL/include/: soil.h
smart_grow/components/STORAGE/: CMakeLists.txt  storage.c
smart_grow/components/STORAGE/include/: storage.h
smart_grow/main/: main.c
